--- a/website/templates/website/home.html
+++ b/website/templates/website/home.html
@@ -47,12 +47,13 @@
 
 </div>
 
-<div class="secondSectionDesktop ">
+<div class="secondSectionDesktop ">  
+     <!--======================================================== FACEBOOK SECTION ======================================================== -->
 <section class=" homePageFacebookSection pb-5">
-    <!--======================================================== FACEBOOK SECTION ======================================================== -->
-<h1 class="facebookHeaderText">RECOMMENDED PAGES</h1>
+ 
+ <h1 class="facebookHeaderText">RECOMMENDED PAGES</h1>
     <div class="facebookSection">
-        <iframe src="https://www.facebook.com/plugins/group.php?href=https%3A%2F%2Fwww.facebook.com%2Fgroups%2Fdeeperlifebiblechurchsingles&width=300&show_social_context=true&show_metadata=true&appId=148660960575291&height=352" width="300" height="352" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>   
+            <iframe src="https://www.facebook.com/plugins/group.php?href=https%3A%2F%2Fwww.facebook.com%2Fgroups%2Fdeeperlifebiblechurchsingles&width=300&show_social_context=true&show_metadata=true&appId=148660960575291&height=352" width="300" height="352" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>   
         <section style="display: none;" id="newsLetterFacebook"  class="newsLetterFacebook homePageNewsLetterSection mb-5">
             <div class="homePageNewsLetterBackground">
                 <h1 class="text-center homePageNewsLetterHeader" >GET NOTIFIED WHEN WE POST SOMETHING NEW!</h1>
@@ -60,7 +61,7 @@
                 <button class="btn btn-dark rounded-0 mt-3 homePageNewsLetterButton" id="newsletter_button">SUBSCRIBE</button>
             </div>
         </section>
-    </section>
+    </section> 
 
 <!--======================================================== WHAT WE DO SECTION ======================================================== -->
 <section class="container-mine homePageWhatSection" id="container-tablet-WhatWeDo">
@@ -96,6 +97,7 @@
 
     <!--======================================================== NEED TO REACH US SECTION ======================================================== -->
     <section id="reachUsWhatSection" style="display:none;" class=" homePageNeedReachUs homePageNeedReachUsMobile">
+  
         <h1 class="homePageNeedReachUsH1 homePageNeedReachUsH1Mobile">NEED TO REACH US?</h1>
         <p class="homePageNeedReachUsEmail homePageNeedReachUsEmailMobile"><b>Email:</b> <span style="font-weight: lighter;" class="homePageNeedReachUsAddress"> HolinessSingles@gmail.com</span></p>
         </section>
@@ -132,9 +134,11 @@
      
 
        <!--======================================================== NEED TO REACH US SECTION ======================================================== -->
+       <br>
        <section id="reachUsWhatSectionOriginal"  style="display:none;" class=" homePageNeedReachUs">
-        <h1 class="homePageNeedReachUsH1">NEED TO REACH US?</h1>
-        <p class="homePageNeedReachUsEmail "><b>Email:</b> <span style="font-weight: lighter;" class="homePageNeedReachUsAddress"> HolinessSingles@gmail.com</span></p>
+        <br>
+        <h1 class="homePageNeedReachUsH1"><br>WANT TO REACH US?</h1>
+        <p class="homePageNeedReachUsEmail "><b>Email:</b> <span style="font-weight: lighter;" class="homePageNeedReachUsAddress"> dHolinessSingles@gmail.com</span></p>
         </section>
         
 </div>
