--- a/dashboard/templates/dashboard/posts_add.html
+++ b/dashboard/templates/dashboard/posts_add.html
@@ -34,7 +34,7 @@
     </div>
 <div  style="width: 97% !important;border-radius: 10px;" class="tableConatiner shadow-lg">
    
-    <form style="width: 100%;" action=" formContainer" method="post" enctype="multipart/form-data">
+    <form style="width: 100%;" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.media }}
         {{ form | crispy }}
