--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -21,7 +21,11 @@
     .buttonHeader{
 
 
-        display: none !important;
+        position: absolute;
+    }
+
+    #buttonHeaderID{
+
     }
 }
 @media only screen and (max-width: 991px) {
@@ -176,14 +180,14 @@ margin-top: 4.7vh;
 </style>
 
 
+<!-- -==========================================HEADER========================================== -->
+<header style="display: block; position: relative; background-color: white;" class=" ">
 
-<header style="display: block; position: relative;" class=" ">
-
-    <button data-toggle="modal" data-target="#exampleModal" class="buttonHeader btn btn-warning rounded-0" style=" font-size: 10px; width: 100px; height: 25px; position: absolute;  margin-left: 19vw; margin-top: 4.9vh;">
   
-        CONTACT
+    <button data-toggle="modal" data-target="#exampleModal" id="buttonHeaderID"
+    class="buttonHeader btn btn-warning rounded-0" style=" font-size: 10px; width: 100px; height: 25px; position: absolute;  margin-left: 19vw; margin-top: 4.9vh;">
+  CONTACT
     </button>
-
     <!-- <span><a  href="https://www.facebook.com/groups/deeperlifebiblechurchsingles"><i style="" class="mediasFacebook fab fa-facebook text-dark"></i></a> -->
      <!-- <a href="https://twitter.com/dclmhq"> <i style="" class="mediasTwitter fab fa-twitter-square text-dark"></i></a></span>  -->
      <button class="buttonHeader btn btn-dark rounded-0" style=" font-size: 10px; width: 100px; height: 25px; position: absolute;  margin-left: 74vw; margin-top: 4.9vh;">
@@ -191,19 +195,11 @@ margin-top: 4.7vh;
          SUBSCRIBE
      </button>
      <div style=" text-align: center; " >
-        <a style=""  id="logo" href="{% url 'website:home' %}"> <img class="my-4 mx-auto" style="width: 250px;" src="{% static 'images/deeperLifeMarriages.png' %}" alt="Online Cushion Store"></a>
-    
-    
+        <a style=""  id="logo" href="{% url 'website:home' %}"> <img class="my-4 mx-auto" style="width: 250px;" src="{% static 'images/HS.png' %}" alt="Online Cushion Store"></a>
      </div>
      </div>
-  
-  
-  
-         
   </header>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-
-
+<!-- -==========================================MODAL========================================== -->
   <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -216,12 +212,10 @@ margin-top: 4.7vh;
         <div class="modal-body">
           <form action="{% url 'contact:submitted' %}" method="post" >
             {% csrf_token %}
-
             {{formMessage| crispy}}
-
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="submit" class="btn btn-primary">Send message</button>
           
+          <button style="float: right;" type="submit" class="btn btn-primary  mt-3">Send message</button>
+          <button style="float: right;" type="button" class="btn btn-secondary mx-3 mt-3" data-dismiss="modal">Close</button>
         </div>
         <div class="modal-footer">
           
@@ -231,6 +225,7 @@ margin-top: 4.7vh;
       </div>
     </div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
